--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -85,7 +85,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 header .logo {
